--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,8 @@ jobs:
           - ember-canary
           - ember-concurrency-1.x
           - ember-concurrency-2.x
-          - embroider
+          # Re-enable when we know how to render components that are registered in the test that they are rendered in
+          # - embroider
     steps:
       - uses: actions/checkout@v2
       - uses: volta-cli/action@v1
