--- a/package.json
+++ b/package.json
@@ -37,6 +37,19 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      "@semantic-release/git"
+    ]
+  },
   "typesVersions": {
     "*": {
       "*": [
@@ -62,6 +75,8 @@
     "@ember/test-helpers": "^2.1.4",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/ember": "3.16.3",
     "@types/ember-qunit": "^3.4.13",
     "@types/ember-resolver": "^5.0.10",
@@ -122,6 +137,7 @@
     "remark-cli": "^9.0.0",
     "remark-lint": "^8.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
+    "semantic-release": "^17.4.0",
     "typescript": "^4.1.5"
   },
   "remarkConfig": {
