--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
+        node:
+          - "12"
+          - "14"
         ember-try-scenario:
           - ember-lts-3.24
           - ember-release
@@ -83,7 +86,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: volta-cli/action@v1
         with:
-          node-version: 12.x
+          node-version: ${{ matrix.node }}
       - name: install dependencies
         run: yarn install --frozen-lockfile
       - name: test
