--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "release": {
     "branches": [
-      "main"
+      "main",
+      "master"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
@@ -155,7 +156,7 @@
     "configPath": "tests/dummy/config"
   },
   "volta": {
-    "node": "14.15.4",
+    "node": "12.20.2",
     "yarn": "1.22.10"
   }
 }
