--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ember-concurrency-decorators": "^2.0.3",
     "ember-concurrency-ts": "^0.2.2",
     "ember-could-get-used-to-this": "^1.0.1",
+    "ember-destroyable-polyfill": "^2.0.3",
     "ember-test-waiters": "^2.1.3"
   },
   "devDependencies": {
