--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/ember__component": "^3.16.4",
     "@types/ember__controller": "^3.16.4",
     "@types/ember__debug": "^3.16.3",
+    "@types/ember__destroyable": "^3.22.0",
     "@types/ember__engine": "^3.16.2",
     "@types/ember__error": "^3.16.1",
     "@types/ember__object": "^3.12.3",
