chore(internal): update addon blueprint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,8 @@ jobs:
           - ember-canary
           - ember-concurrency-1.x
           - ember-concurrency-2.x
-          - embroider
+          - embroider-safe
+          - embroider-optimized
     steps:
       - uses: actions/checkout@v2
       - uses: volta-cli/action@v1
