--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     }
   },
   "dependencies": {
-    "ember-cli-babel": "^7.23.1",
-    "ember-cli-htmlbars": "^5.3.2",
+    "ember-cli-babel": "^7.26.3",
+    "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-typescript": "^4.1.0",
     "ember-concurrency": "^1.3.0",
     "ember-concurrency-decorators": "^2.0.3",
@@ -74,9 +74,10 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.1.4",
-    "@glimmer/component": "^1.0.3",
-    "@glimmer/tracking": "^1.0.3",
+    "@ember/test-helpers": "^2.2.5",
+    "@embroider/test-setup": "^0.37.0",
+    "@glimmer/component": "^1.0.4",
+    "@glimmer/tracking": "^1.0.4",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@types/ember": "3.16.3",
@@ -107,8 +108,8 @@
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
-    "ember-cli": "~3.24.0",
+    "ember-auto-import": "^1.11.2",
+    "ember-cli": "~3.26.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
@@ -117,17 +118,17 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-page-title": "^6.0.3",
-    "ember-qunit": "^5.1.1",
+    "ember-page-title": "^6.2.1",
+    "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
-    "ember-source": "^3.24.0",
+    "ember-source": "^3.26.1",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^2.18.1",
+    "ember-template-lint": "^3.2.0",
     "ember-try": "^1.4.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "7.2.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-decorator-position": "^2.2.18",
-    "eslint-plugin-ember": "^10.2.0",
+    "eslint-plugin-ember": "^10.3.0",
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "3.3.1",
