--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,16 +36,11 @@ jobs:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     name: Tooling
     runs-on: ubuntu-latest
-    needs: [install_dependencies]
 
     steps:
       - uses: actions/checkout@v2
       - uses: volta-cli/action@v1
-      - uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-
+      - run: yarn install --frozen-lockfile
       - name: Semantic Release
         run: yarn semantic-release --dry-run
         working-directory: ./ember-resources
