--- a/package.json
+++ b/package.json
@@ -64,12 +64,12 @@
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-typescript": "^4.2.1",
-    "ember-concurrency": "^2.2.0",
-    "ember-concurrency-decorators": "^2.0.3",
-    "ember-concurrency-ts": "^0.3.1",
     "ember-could-get-used-to-this": "^1.0.1",
-    "ember-destroyable-polyfill": "^2.0.3",
     "ember-test-waiters": "^2.1.3"
+  },
+  "peerDependencies": {
+    "ember-concurrency": "^2.2.0 || ^1.0.0",
+    "ember-concurrency-decorators": "^2.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -114,6 +114,9 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-concurrency": "^2.2.0",
+    "ember-concurrency-decorators": "^2.0.3",
+    "ember-concurrency-ts": "^0.3.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
